# Port-of-SimAVR

./: README.md  index.html  main.css
CodeBase/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c  simavr.js  simulator.h
CodeBase/parts/: hd44780.c  hd44780.h  wdg0151.c  wdg0151.h  wdg0151Orig.c
Examples/Prog1/: Blink_two_LED.c  Blink_two_LED.elf  Blink_two_LED.hex  Blink_two_LED.lst  Blink_two_LED.map  Makefile
Examples/Prog2/: Blink.c  Blink.elf  Blink.hex  Blink.lst  Blink.map  Makefile
Examples/Prog3/: Blink_1280.c  Blink_1280.elf  Blink_1280.hex  Blink_1280.lst  Blink_1280.map  Makefile
Examples/Prog4/: Blink_4_LEDs.c  Blink_4_LEDs.elf  Blink_4_LEDs.hex  Blink_4_LEDs.lst  Blink_4_LEDs.map  Makefile  Makefile.bak
Front_End/: index.html
Front_End/js/: main.js  simavr.js
Front_End/tpl/: btns.html  leds.html
js/: main.js  simavr.js  worker.js
simavr_atmega_1280/: Makefile  Makefile.common  build.sh
simavr_atmega_1280/examples/board_hd77480/: charlcd.c
simavr_atmega_1280/examples/web_board/: Makefile  README  build.sh  default.c
simavr_atmega_1280/simavr/: Makefile  run_avr  run_avr.js
simavr_atmega_1280/simavr/obj-asmjs-unknown-emscripten/: avr_adc.d  avr_bitbang.d  avr_eeprom.d  avr_extint.d  avr_flash.d  avr_ioport.d  avr_lin.d  avr_spi.d  avr_timer.d  avr_twi.d  avr_uart.d  avr_usb.d  avr_watchdog.d  libsimavr.so.1  run_avr.d  run_avr.elf  sim_90usb162.d  sim_avr.d  sim_core.d  sim_cycle_timers.d  sim_elf.d  sim_gdb.d  sim_hex.d  sim_interrupts.d  sim_io.d  sim_irq.d  sim_mega128.d  sim_mega1280.d  sim_mega1281.d  (+32 more)
(+68 files in other folders)
